# call-asr-platform

./: .env.example  .gitignore  CONTRIBUTING.md  README.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: health.py  jobs.py  offline.py  tts.py  (+5 more)
backend/asr_service/: Dockerfile  __init__.py  batch_engine.py  config.py  engine.py  healthcheck.py  scheduler.py  server.py  session.py
backend/data/: sensitive_words.sample.json
backend/scripts/: bench_asr_service.py  bench_sensitive.py  download_realtime_models.py  export_asr_models.py  setup_cosyvoice.ps1  start_cosyvoice.ps1
backend/tests/: test_acoustic_emotion.py  test_analysis_pipeline.py  test_audio_conversion.py  test_audio_downloader.py  test_cosyvoice_setup_script.py  test_deepseek_summary.py  test_deploy_compose.py  test_health.py  test_inference_gate.py  test_insights.py  test_job_manager.py  test_job_models.py  test_job_repository.py  test_job_storage.py  test_jobs_api.py  test_model_registry.py  test_offline_api.py  test_pbx_calls.py  test_postprocess.py  test_providers.py  test_realtime_api.py  test_realtime_protocol.py  test_realtime_session.py  test_repository.py  test_sensevoice_provider.py  test_sensitive.py  test_sensitive_admin.py  test_sensitive_normalizer.py  test_sensitive_repository.py  test_session_repository.py  test_tts_api.py  test_tts_health.py  test_tts_manager.py  test_tts_provider.py  test_tts_queue.py  test_tts_repository.py  test_tts_storage.py  test_tts_worker_container.py  test_url_api.py
backend/tts_worker/: Dockerfile  server.py
(+139 files in other folders)
