[project]
name = "call-asr-platform-backend"
version = "0.1.0"
description = "Local-first call ASR analysis prototype"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-multipart>=0.0.9",
  "aiosqlite>=0.20.0",
  "websockets>=12.0",
  "httpx>=0.27.0",
  "funasr>=1.0.0",
  "modelscope>=1.0.0",
  "av>=12.0.0",
  "numpy>=1.26.0",
  "torch>=2.0.0",
  "redis>=5.2,<6"
]

[project.optional-dependencies]
models = [
  "faster-whisper>=1.0.0",
  "numpy>=1.26.0"
]
test = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "PyYAML>=6.0.2",
  "fakeredis>=2.25,<3"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "tests*", "tts_worker*", "vendor*"]
